# PokemonIngestor

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/dags/: ingest_prices.py
app/: docker-compose.yaml
app/airflow/dags/: ingest_prices.py
app/backend/: main.py  requirements.txt
app/charmander/: main.py  requirements.txt
app/crawler/crawler/: pipelines.py
app/db/: db.py  init_db.py
app/gengar/crawler/: pipelines.py
app/indexer/: main.py
app/ingestion/: main.py
app/lugia/: utils.py
crawler/crawler/: items.py  pipelines.py  settings.py
crawler/crawler/spiders/: pokechartspider.py
ingestion/: main.py
models/: models.py
src/api/: main.py
src/cli/: init_cassandra.py  init_elasticsearch.py  init_postgres.py  linker.py  populate_metadata.py
src/common/: config.py
src/common/database/: cassandra.py  postgres.py
src/common/logging/: json_formatter.py  logger.py
src/common/models/: postgres_models.py
src/common/utils/: converter.py  pagination.py
src/ingestion/: populate_metadata.py  service.py
src/runner/: Dockerfile  entrypoint_python_runner.sh
src/scraper/: Dockerfile
src/scraper/crawler/: items.py  pipelines.py
src/scraper/crawler/spiders/: pokechartspider.py
src/scripts/: healthcheck.py  reindex_elastic.py
src/services/sync/: bulk_index_raw.py
