[project]
name = "pokemon-ingestor"
version = "0.1.0"
description = "Data engineering project to track Pokemon card prices across grades"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "alexhristov14", email = "alex-hristov@hotmail.com"}
]
keywords = ["pokemon", "cards", "price-tracking", "data-engineering", "scraping"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "cassandra-driver>=3.29.0",
    "elasticsearch>=8.15.0",
    "scrapy>=2.11.0",
    "pandas>=2.2.0",
    "tcgdex-sdk>=2.0.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # For FastAPI testing
    
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "isort>=5.13.0",
    
    "types-requests>=2.32.0",
]

api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "elasticsearch>=8.15.0",
    "cassandra-driver>=3.29.0",
    "tcgdex-sdk>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

scraper = [
    "scrapy>=2.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "elasticsearch>=8.15.0",
    "cassandra-driver>=3.29.0",
]

ingestion = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "elasticsearch>=8.15.0",
    "cassandra-driver>=3.29.0",
    "pandas>=2.2.0",
]

[project.scripts]
init-postgres = "cli.init_postgres:main"
init-cassandra = "cli.init_cassandra:main"
init-elasticsearch = "cli.init_elasticsearch:main"
populate-metadata = "cli.populate_metadata:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src.common", "src.api", "src.scraper", "src.ingestion", "src.cli"]

[tool.setuptools.package-dir]
"" = "."

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# Ruff configuration (replaces flake8, isort, pylint)
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "cassandra.*",
    "elasticsearch.*",
    "tcgdexsdk.*",
]
ignore_missing_imports = true

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
